Fixing tab aligns

--- a/src/cdn/elements/tabs.css
+++ b/src/cdn/elements/tabs.css
@@ -52,6 +52,6 @@
   color: var(--primary);
 }
 
-.tabs:is(.left-align, .center-align .right-align) > a {
+.tabs:is(.left-align, .center-align, .right-align) > a {
   width: auto;
 }
